--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "scripts": {
     "dev": "next dev -p 8000",
     "build": "next build",
-    "start": "next start -p $PORT",
+    "start": "next start",
     "lint": "next lint",
+    "heroku-postbuild": "npm run build",
     "cypress": "cypress open",
     "analyze": "ANALYZE=true next build"
   },
