--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "medusa-storefront"
   ],
   "scripts": {
-    "dev": "next dev -p 8000",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
